//Header proto file Created by zdj on 2016/7/10

syntax = "proto3";
package com.jkys.phobos.remote.protocol.protobuf;
message Header {
    int32 protocol_version = 1;
    int64 sequence_id = 2;
    SerializationType serialization_type = 3;
    Type type = 4;
    int32 size = 5;
    int64 timestamp = 6;

    enum SerializationType {
        JSON = 0;
        MAGPACK = 1;
        PROTOBUF = 2;
    }

    enum Type {
        DEFAULT = 0;
        WITHSTREAM = 1;
        STREAM = 2;
        CLOSESTREAM = 3;
    }
}