//PhobosResponse proto file Created zdj on 2016/7/10

syntax = "proto3";
package com.jkys.phobos.remote.protocol.protobuf;
import "Header.proto";
import "Response.proto";
message PhobosResponse {
    com.jkys.phobos.remote.protocol.protobuf.Header header = 1;
    com.jkys.phobos.remote.protocol.protobuf.Response response = 2;
}